# RustyAssetBundleEXtractor

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: bundlefile_builder.rs  create_assetbundle.rs  diff.rs  dump_bundle.rs  dump_serialized.rs  dump_serialized_hierarchy.rs  dump_serialized_hierarchy_json.rs  extract.rs  extract_bundle.rs  extract_bundle_parallel.rs  generate_commonstring.rs  list_scenes.rs  readme.rs  serialized_builder.rs  tpk.rs  tpk2rust.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bundlefile.rs  serializedfile.rs
resources/: lz4.tpk
src/: archive_storage_manager.rs  commonstring.rs  files.rs  lib.rs  objects.rs  read_ext.rs  tpk.rs  typetree.rs  typetree_cache.rs  unity_version.rs  write_ext.rs
src/files/: bundlefile.rs  serializedfile.rs  serialzedfile.rs  unityfile.rs  webfile.rs
src/files/bundlefile/: builder.rs  config.rs  mod.rs  reader.rs
src/files/serializedfile/: builder.rs  mod.rs
src/objects/: class_id.rs  classes.rs  mod.rs  pptr.rs
src/serde_typetree/: de.rs  error.rs  mod.rs  ser.rs
src/typetree/: mod.rs  provider.rs  typetree_cache.rs
tests/: bundle_exact_roundtrip.rs  bundle_uncompressed_roundtrip.rs  external_serialized_exact_roundtrip.rs  external_test_data.rs  external_typetree_roundtrip.rs  serialized_roundtrip.rs
tests/files/: README.md  chunkbased-2020.2.2f1.bundle  chunkbased-2022.3.18f1.bundle  chunkbased-2scenes-2022.3.18f1.bundle  default-2020.2.2f1.bundle  default-2022.3.18f1.bundle  uncompressed-2020.2.2f1.bundle  uncompressed-2022.3.18f1.bundle  uncompressed-2scenes-2022.3.18f1.bundle
utils/class_generator/: .gitignore  generate_class_id.py  generator.py  metadata_scraper.py  pyproject.toml
