[package]
name = "rabex"
version = "0.0.3"
edition = "2024"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "COPYRIGHT"
]
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>", "Jakob Hellermann <jakobhellermann@protonmail.com>"]
description = "Tools for parsing and writing unity files, bundles and typetrees"
documentation = "https://docs.rs/rabex"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor"

[features]
default = ["embed-tpk", "compression-lzma", "compression-lz4"]
generated = []
embed-tpk = ["compression-lz4"]
serde_path_to_error = ["dep:serde_path_to_error"]
tpk-compression-brotli = ["dep:brotli"]

unitycn = ["dep:cbc", "dep:aes"]

compression-all = ["compression-lzma", "compression-lz4", "compression-lz4hc"]
compression-lz4hc = ["dep:lz4"]
compression-lz4 = ["dep:lz4_flex"]
compression-lzma = ["dep:lzma-rs"]

[dependencies]
# parsing
byteorder = "1.5"
bitflags = "2.9"
num_enum = { version = "0.7", default-features = false }

# compression formats
lzma-rs = { version = "0.3.0", optional = true }
brotli = { version = "8.0", optional = true }
lz4_flex = { version = "0.11", default-features = false, features = ["std"], optional = true }
lz4 = { version = "1.28", optional = true } # this is a c based library, which supports the lz4hc quality preset

# UnityCN Encryption
aes = { version = "0.8.2", optional = true }
cbc = { version = "0.1.2", optional = true }

# serialization
serde = "1.0"
serde_derive = "1.0"
serde_path_to_error = { version = "0.1.17", optional = true }

elsa = "1.11"
rustc-hash = "2.1"
md4 = "0.10"


[dev-dependencies]
anyhow = "1.0"
memmap2 = "0.9"
pretty_assertions = "1.4"
rayon = "1.10"
serde_json = { version = "1.0", features = ["preserve_order"] }
