[package]
name = "rabex-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rabex]
path = ".."

[[bin]]
name = "bundlefile"
path = "fuzz_targets/bundlefile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serializedfile"
path = "fuzz_targets/serializedfile.rs"
test = false
doc = false
bench = false
